[gd_scene load_steps=12 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/bg.png" type="Texture" id=2]
[ext_resource path="res://battle/mosquitos/Assets/yellow.png" type="Texture" id=3]
[ext_resource path="res://temple/assets/font60.fnt" type="BitmapFont" id=4]
[ext_resource path="res://temple/assets/font40.fnt" type="BitmapFont" id=5]
[ext_resource path="res://temple/assets/font20.fnt" type="BitmapFont" id=6]
[ext_resource path="res://player/assets/chara.png" type="Texture" id=7]
[ext_resource path="res://temple/assets/font32.fnt" type="BitmapFont" id=8]
[ext_resource path="res://temple/assets/font14.fnt" type="BitmapFont" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 120, 70 )

[sub_resource type="Animation" id=2]

resource/name = "intro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Node2D" parent="."]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="background"]

transform/scale = Vector2( 1.01563, 1 )
z/z = -3
texture = ExtResource( 2 )
centered = false

[node name="fly" type="Sprite" parent="background"]

transform/pos = Vector2( 490, 95 )
transform/rot = 90.0
transform/scale = Vector2( 5.9375, 6.25 )
texture = ExtResource( 3 )

[node name="text" type="Node2D" parent="."]

[node name="Label" type="Label" parent="text"]

visibility/blend_mode = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 355.0
margin/bottom = 74.0
custom_fonts/font = ExtResource( 4 )
text = "RamenFly"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="Label1" type="Label" parent="text"]

visibility/blend_mode = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 70.0
margin/right = 415.0
margin/bottom = 134.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.578125, 0.578125, 1 )
text = "RamenFly"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="text"]

visibility/blend_mode = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 120.0
margin/right = 240.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 6 )
text = "RamenFly"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buttons" type="Node2D" parent="."]

[node name="play" type="Node2D" parent="buttons"]

[node name="Sprite" type="Sprite" parent="buttons/play"]

transform/pos = Vector2( 115, 300 )
transform/scale = Vector2( 4.6875, 4.375 )
texture = ExtResource( 7 )
vframes = 3
hframes = 2

[node name="Play" type="Label" parent="buttons/play"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 180.0
margin/top = 280.0
margin/right = 270.0
margin/bottom = 315.0
custom_fonts/font = ExtResource( 8 )
text = "Play"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="play" type="Area2D" parent="buttons/play"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 160, 310 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="buttons/play/play"]

transform/pos = Vector2( 160, 310 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Button" type="Button" parent="buttons/play"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 240.0
margin/right = 280.0
margin/bottom = 380.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="quit" type="Node2D" parent="buttons"]

__meta__ = { "_edit_lock_":true }

[node name="Button1" type="Button" parent="buttons/quit"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 310.0
margin/right = 590.0
margin/bottom = 450.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Sprite" type="Sprite" parent="buttons/quit"]

transform/pos = Vector2( 515, 380 )
transform/scale = Vector2( 4.6875, 4.375 )
texture = ExtResource( 7 )
vframes = 3
hframes = 2
frame = 2

[node name="Play" type="Label" parent="buttons/quit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 380.0
margin/right = 470.0
margin/bottom = 415.0
custom_fonts/font = ExtResource( 8 )
text = "Quit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Area2D1" type="Area2D" parent="buttons/quit"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.878049, 0, 0, 0.958904, 488, 380 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="buttons/quit/Area2D1"]

transform/pos = Vector2( 488, 380 )
transform/scale = Vector2( 0.878049, 0.958904 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="credits" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 430.0
margin/top = 220.0
margin/right = 580.0
margin/bottom = 255.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.192078, 0.152344, 1 )
text = "Credits"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="credits" type="Button" parent="credits"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[node name="ludum" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -30.0
margin/top = 450.0
margin/right = 210.0
margin/bottom = 467.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.884186, 1, 0.730469, 1 )
text = "A ludum dare game"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="mouse_enter" from="buttons/play/play" to="." method="_on_play_mouse_enter"]

[connection signal="mouse_exit" from="buttons/play/play" to="." method="_on_play_mouse_exit"]

[connection signal="mouse_enter" from="buttons/play/Button" to="." method="_on_Button_mouse_enter"]

[connection signal="mouse_exit" from="buttons/play/Button" to="." method="_on_Button_mouse_exit"]

[connection signal="pressed" from="buttons/play/Button" to="." method="_on_Button_pressed"]

[connection signal="mouse_enter" from="buttons/quit/Button1" to="." method="_on_Button1_mouse_enter"]

[connection signal="mouse_exit" from="buttons/quit/Button1" to="." method="_on_Button1_mouse_exit"]

[connection signal="pressed" from="buttons/quit/Button1" to="." method="_on_Button1_pressed"]

[connection signal="mouse_enter" from="buttons/quit/Area2D1" to="." method="_on_Area2D1_mouse_enter"]

[connection signal="mouse_exit" from="buttons/quit/Area2D1" to="." method="_on_Area2D1_mouse_exit"]

[connection signal="pressed" from="credits/credits" to="." method="_on_credits_pressed"]


